--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Hrushikesh</span><br> Software Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Hrushikesh</span><br> Software Engineer</h1>
 
                     <a href="https://drive.google.com/file/d/1G6ORwWr-SK_L46VWZCA9OvKu79DV5FQk/view?usp=sharing" class="button">Get CV</a>
                 </div>
