--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="home__data">
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Hrushikesh</span><br> Software Engineer</h1>
 
-                    <a href="https://drive.google.com/file/d/1G6ORwWr-SK_L46VWZCA9OvKu79DV5FQk/view?usp=sharing" class="button">Get CV</a>
+                    <a href="https://drive.google.com/file/d/1UzhpBR3kGXZENfINaJoIndxrBkKFKMx5/view" class="button">Get CV</a>
                 </div>
 
                 <div class="home__social">
@@ -66,7 +66,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Rishi</h2>
-                        <p class="about__text">Passionate about competitive programming currently final year student pursuing MCA in LPU. Good understand in DATA STRUCTURE,DATABASE and OOPS.i have done certification from coursera in data structure and algorithms and Oracle SQL from udemy. i have secured 8.34/10 in my first year of mca.  </p>           
+                        <p class="about__text">Passionate about competitive programming currently final year student pursuing MCA in LPU. Good understand in DATA STRUCTURE,DATABASE and OOPS.i have done certification from coursera in data structure , algorithms and SQL programming. i have secured 8.34/10 in my first year of mca.My Project links are bellow hosted in aws and heroku.  </p>           
                     </div>                                   
                 </div>
             </section>
@@ -147,15 +147,15 @@
                         </a>
                     </div>
                     <div class="work__img">
-                        <a href=" https://rishi7pillai.github.io/Gray/">
+                        <a href="https://rishi7pillai.github.io/TwitterSchedular/">
                         <img src="assets/img/work2.jpg" alt="">
-                        Website for Job consultancy agency
+                         Twitter Scheduler App
                         </a>
                     </div>
                     <div class="work__img">
-                        <a href="#">
+                        <a href="https://rishi7pillai.github.io/TataHome/">
                         <img src="assets/img/work3.jpg" alt="">
-                         Portfolio Website Details 
+                          Home Price Prediction App 
                         </a>
                     </div>
                     <div class="work__img">
@@ -165,9 +165,9 @@
                         </a>
                     </div>
                     <div class="work__img">
-                        <a href="https://www.udemy.com/certificate/UC-d91bfb89-9d72-45b7-a34c-96bc2173fdc5/">
+                        <a href="https://www.coursera.org/account/accomplishments/verify/DFVT7UTDKC6L/">
                         <img src="assets/img/work5.jpg" alt="">
-                        Oracle SQL Programming
+                         SQL Programming
                         </a>
                     </div>
                     <div class="work__img">
