--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Hrushikesh</span><br> Software Engineer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Rishi</span><br> Software Engineer</h1>
 
-                    <a href="https://drive.google.com/file/d/1UzhpBR3kGXZENfINaJoIndxrBkKFKMx5/view" class="button">Get CV</a>
+                    <a href="https://drive.google.com/file/1UzhpBR3kGXZENfINaJoIndxrBkKFKMx5/view" class="button">Get CV</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/rishi-pollai-2247b9115/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.hackerearth.com/@hrushikeshpollai777" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
-                    <a href="https://github.com/rishi7pillai" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/rishi-pol-2247b9115/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://www.hackerearth.com/@rishipollai777" class="home__social-icon"><i class='bx bxl-behance' ></i></a>
+                    <a href="https://github.com/rishipillai" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">    
