--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
         <title>Portfolio website complete</title>
     </head>
     <body>
+        <script>
+    window.YGC_WIDGET_ID = "355258eb-5957-4a82-a99d-5772b65ce958";
+    (function() {
+      var script = document.createElement('script');
+      script.src = "https://widget.yourgpt.ai/script.js";
+      script.id = 'yourgpt-chatbot';
+      document.body.appendChild(script);
+    })();
+</script>
         <!--===== HEADER =====-->
         <header class="l-header">
             <nav class="nav bd-grid">
