--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <title>Portfolio website complete</title>
-        <script>
-    window.YGC_WIDGET_ID = "355258eb-5957-4a82-a99d-5772b65ce958";
-    (function() {
-      var script = document.createElement('script');
-      script.src = "https://widget.yourgpt.ai/script.js";
-      script.id = 'yourgpt-chatbot';
-      document.body.appendChild(script);
-    })();
-</script>
     </head>
     <body>
         
@@ -25,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Rishi Pollai</a>
+                    <a href="#" class="nav__logo">Rishi</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
@@ -231,5 +222,14 @@
 
         <!--===== MAIN JS =====-->
         <script src="assets/js/main.js"></script>
+        <script>
+    window.YGC_WIDGET_ID = "355258eb-5957-4a82-a99d-5772b65ce958";
+    (function() {
+      var script = document.createElement('script');
+      script.src = "https://widget.yourgpt.ai/script.js";
+      script.id = 'yourgpt-chatbot';
+      document.body.appendChild(script);
+    })();
+</script>
     </body>
 </html>
